# swendy

./: .clang-format  CMakeLists.txt
cmake/: CompilerWarnings.cmake  PreventInSourceBuilds.cmake  ProjectSettings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
res/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/output/: CMakeLists.txt
src/output/ppm/: CMakeLists.txt  ppm.h
src/output/raster/: CMakeLists.txt  ppm.cpp  ppm.h
src/util/: CMakeLists.txt  line.h  log.cpp  log.h  split_string.h  str_to_num.h  vec2.h
